--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "@types/react": "18.0.4",
         "@types/react-dom": "18.0.0",
         "@types/react-slick": "^0.23.8",
+        "@types/storybook__react": "^5.2.1",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
         "eslint": "8.13.0",
